<resources>
    <string name="app_name">NPuzzle</string>
    <string name="threeXthree">3x3</string>
    <string name="fourXfour">4x4</string>
    <string name="fiveXfive">5x5</string>
    <string name="instruction">Touch the block you want to move. Good Luck :)</string>
    <string name="new_game">New Game</string>
    <string name="solve">Solve</string>
    <string name="puzzle_15">Puzzle 15</string>
</resources>
