<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rank"
    android:orientation="vertical"
    android:paddingTop="32dp">

    <TextView
        android:id="@+id/textView_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:text="@string/instruction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#fff"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#558B2F"
            android:layout_weight="1"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/button_solve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#fff"
            android:backgroundTint="#0277BD"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/solve" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/puzzle_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

    </RelativeLayout>

</LinearLayout>